--- a/jupyter-notebooks/Decoding_functionalized.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized.ipynb
@@ -1629,21 +1629,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 5]\n"
+      "[4, 6, 9, 10, 11, 12, 13, 14, 15, 17, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30]\n"
      ]
     }
    ],
    "source": [
     "#### Define parameters\n",
-    "rat_name = 'bernard'\n",
-    "day =  13    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "rat_name = 'remy'\n",
+    "day =  20    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
     "epoch = 2  # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "\n",
     "# define data source filepaths\n",
@@ -1659,8 +1659,8 @@
     "\n",
     "# if you want all ca1 tets with no deadchans, set tetlist to None. otherwise, specify list\n",
     "\n",
-    "#tetlist = None\n",
-    "tetlist = [4,5]\n",
+    "tetlist = None\n",
+    "#tetlist = [4,5]\n",
     "\n",
     "if tetlist is None:\n",
     "    animalinfo  = {rat_name: Animal(directory=raw_directory, short_name=rat_name)}\n",
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1695,13 +1695,13 @@
      "output_type": "stream",
      "text": [
       "Duplicate marks found (and removed): 0\n",
-      "original length: 414243\n",
-      "9 above 2000uV events removed\n",
+      "original length: 3104808\n",
+      "0 above 2000uV events removed\n",
       "0 below 100uV events removed\n",
       "0 below -999uV events removed\n",
-      "after filtering: 414234\n",
+      "after filtering: 3104808\n",
       "Linearization found. Loading it\n",
-      "Rips less than velocity thresh: 1361\n",
+      "Rips less than velocity thresh: 1256\n",
       "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  64.\n",
       "  69.  74.  79.  84.  89.  94.  99. 104. 109. 114. 119. 124. 129. 134.\n",
       " 139. 144. 147. 152. 157. 162. 167. 172. 177. 182. 187. 192. 197. 202.\n",
@@ -1712,18 +1712,18 @@
       " 483. 485. 490. 495. 500. 505. 510. 515. 520. 525. 530. 535. 540. 545.\n",
       " 550. 555. 560. 565. 568. 573. 578. 583. 588. 593. 598. 603. 608. 613.\n",
       " 618. 623. 628. 633. 638. 643. 648. 649. 654. 659. 664. 669. 674. 679.\n",
-      " 684. 689. 694. 699. 704. 709.]\n",
+      " 684. 689. 694. 699. 704. 709. 714.]\n",
       "[[  0   8]\n",
       " [ 13  25]\n",
-      " [ 30  43]\n",
-      " [ 47  60]\n",
+      " [ 30  42]\n",
+      " [ 47  59]\n",
       " [ 65  77]\n",
       " [ 82  94]\n",
       " [ 99 111]\n",
-      " [116 127]\n",
-      " [133 144]]\n",
-      "CPU times: user 11.7 s, sys: 596 ms, total: 12.3 s\n",
-      "Wall time: 5.19 s\n"
+      " [116 128]\n",
+      " [133 145]]\n",
+      "CPU times: user 8min 33s, sys: 13.7 s, total: 8min 46s\n",
+      "Wall time: 31.7 s\n"
      ]
     }
    ],
@@ -1782,18 +1782,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of trials:  157\n",
-      "Encoding spikes: 199392\n",
-      "Decoding spikes: 211923\n",
-      "Total epoch time (sec):  5481.580233333333\n",
-      "2606.4492\n",
+      "Number of trials:  109\n",
+      "Encoding spikes: 1181194\n",
+      "Decoding spikes: 1904645\n",
+      "Total epoch time (sec):  4108.5141\n",
+      "1375.2204333333334\n",
       "0\n"
      ]
     }
