--- a/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
@@ -560,7 +560,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -652,19 +665,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1630,27 +1630,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3, 4, 6, 7, 9, 10, 11, 12, 13, 14, 15, 17, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30]\n"
+      "[1, 4, 5, 6, 8, 9, 10, 11, 12, 15, 16, 17, 18, 20, 21, 24, 25, 27, 28, 29, 30]\n"
      ]
     }
    ],
    "source": [
     "## Define parameters\n",
-    "rat_name = 'remy'\n",
-    "day =  20    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "rat_name = 'bill'\n",
+    "day =  7    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
     "epoch = 2  # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
+    "# bill 12-18-19: day 7 epoch 2\n",
     "\n",
     "# define data source filepaths\n",
-    "path_base = '/stelmo/anna/'\n",
+    "path_base = '/stelmo/mcoulter/'\n",
+    "#path_base = '/stelmo/anna/'\n",
     "raw_directory = path_base + rat_name + '/filterframework/'\n",
-    "output_directory = raw_directory + '/decoding/'\n",
+    "#raw_directory = path_base + 'raw_data/' + rat_name + '/'\n",
+    "#output_directory = '/stelmo/anna/remy/filterframework/decoding/'\n",
+    "output_directory = '/stelmo/mcoulter/bill/filterframework/'\n",
     "day_ep = str(day) + '_' + str(epoch)\n",
     "\n",
     "#tetrodes_dictionary = {'remy': [4,6,9,10,11,12,13,14,15,17,19,20,21,22,23,24,25,26,28,29,30], # for a 45 min runtime on virga use tetrodes 4,9,11,13,15,19,21,23,25,28,30\n",
@@ -1692,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1704,31 +1708,55 @@
       "4397971 above 2000uV events removed\n",
       "0 below 100uV events removed\n",
       "0 below -999uV events removed\n",
-      "after filtering: 0\n",
+      "after filtering: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#initialize data importer\n",
+    "datasrc = trodes2SS.TrodesImport(raw_directory, rat_name, [day], \n",
+    "                       [epoch], tetrodes)\n",
+    "# Import marks\n",
+    "marks = datasrc.import_marks()\n",
+    "print('original length: '+str(marks.shape[0]))\n",
+    "# OPTIONAL: to reduce mark number, can filter by size. Current detection threshold is 100  \n",
+    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=100)\n",
+    "# remove any big negative events (artifacts?)\n",
+    "marks = trodes2SS.threshold_marks_negative(marks, negthresh=-999)\n",
+    "print('after filtering: '+str(marks.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate marks found (and removed): 0\n",
+      "original length: 3835720\n",
+      "282 above 2000uV events removed\n",
+      "2244399 below 80uV events removed\n",
+      "19 below -999uV events removed\n",
+      "after filtering: 1591020\n",
       "Linearization found. Loading it\n",
-      "Rips less than velocity thresh: 1256\n",
-      "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  64.\n",
-      "  69.  74.  79.  84.  89.  94.  99. 104. 109. 114. 119. 124. 129. 134.\n",
-      " 139. 144. 147. 152. 157. 162. 167. 172. 177. 182. 187. 192. 197. 202.\n",
-      " 207. 212. 217. 222. 227. 232. 237. 242. 247. 252. 257. 262. 267. 272.\n",
-      " 277. 282. 287. 292. 297. 302. 307. 312. 317. 319. 324. 329. 334. 339.\n",
-      " 344. 349. 354. 359. 364. 369. 374. 379. 384. 389. 394. 399. 403. 408.\n",
-      " 413. 418. 423. 428. 433. 438. 443. 448. 453. 458. 463. 468. 473. 478.\n",
-      " 483. 485. 490. 495. 500. 505. 510. 515. 520. 525. 530. 535. 540. 545.\n",
-      " 550. 555. 560. 565. 568. 573. 578. 583. 588. 593. 598. 603. 608. 613.\n",
-      " 618. 623. 628. 633. 638. 643. 648. 649. 654. 659. 664. 669. 674. 679.\n",
-      " 684. 689. 694. 699. 704. 709. 714.]\n",
-      "[[  0   8]\n",
-      " [ 13  25]\n",
-      " [ 30  42]\n",
-      " [ 47  59]\n",
-      " [ 65  77]\n",
-      " [ 82  94]\n",
-      " [ 99 111]\n",
-      " [116 128]\n",
-      " [133 145]]\n",
-      "CPU times: user 5min 31s, sys: 7min 50s, total: 13min 21s\n",
-      "Wall time: 1min 2s\n"
+      "Rips less than velocity thresh: 601\n",
+      "[  0.   5.  10.  15.  20.  25.  30.  35.  40.  45.  50.  55.  60.  65.\n",
+      "  70.  72.  77.  82.  87.  92.  97. 102. 107. 112. 117. 122. 127. 132.\n",
+      " 137. 142. 147. 152. 157. 159. 164. 169. 174. 179. 184. 189. 194. 199.\n",
+      " 204. 209. 214. 219. 224. 229. 234. 239. 244. 249. 254. 259. 264. 269.\n",
+      " 274. 279. 284. 289. 294. 299. 304. 309. 314. 319. 324. 329. 334. 339.\n",
+      " 340. 345. 350. 355. 360. 365. 370. 375. 380. 385. 390. 395. 400. 405.\n",
+      " 410.]\n",
+      "[[ 0 10]\n",
+      " [15 28]\n",
+      " [33 46]\n",
+      " [51 64]\n",
+      " [70 83]]\n",
+      "CPU times: user 10min 58s, sys: 18.7 s, total: 11min 17s\n",
+      "Wall time: 47.4 s\n"
      ]
     }
    ],
@@ -1743,7 +1771,7 @@
     "marks = datasrc.import_marks()\n",
     "print('original length: '+str(marks.shape[0]))\n",
     "# OPTIONAL: to reduce mark number, can filter by size. Current detection threshold is 100  \n",
-    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=100)\n",
+    "marks = trodes2SS.threshold_marks(marks, maxthresh=2000,minthresh=80)\n",
     "# remove any big negative events (artifacts?)\n",
     "marks = trodes2SS.threshold_marks_negative(marks, negthresh=-999)\n",
     "print('after filtering: '+str(marks.shape[0]))\n",
@@ -1770,7 +1798,7 @@
     "    track_segment_ids = np.load(lin_output2)\n",
     "    \n",
     "# Import ripples\n",
-    "rips_tmp = datasrc.import_rips(linear_pos_raw, velthresh=4) \n",
+    "rips_tmp = datasrc.import_rips(linear_pos_raw, velthresh=8) \n",
     "rips = RippleTimes.create_default(rips_tmp,1)  # cast to rippletimes obj\n",
     "print('Rips less than velocity thresh: '+str(len(rips)))\n",
     "# generate boundary definitions of each segment\n",
@@ -1801,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1809,8 +1837,8 @@
      "output_type": "stream",
      "text": [
       "Number of trials:  75\n",
-      "Encoding spikes: 248948\n",
-      "Decoding spikes: 603813\n",
+      "Encoding spikes: 407765\n",
+      "Decoding spikes: 1174189\n",
       "Total epoch time (sec):  3018.2282\n",
       "969.7716666666666\n",
       "0\n"
@@ -1849,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,16 +1970,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff75377b668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd5f451e080>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1975,16 +2003,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18:18:33 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Dask chunksize: 251\n",
-      "18:18:33 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Memory utilization at: 50.0%\n",
-      "18:18:33 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Expected worker peak memory usage: 476.73 MB\n"
+      "21:36:44 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Dask chunksize: 153\n",
+      "21:36:44 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Memory utilization at: 50.0%\n",
+      "21:36:44 [INFO] spykshrk.franklab.pp_decoder.pp_clusterless: Expected worker peak memory usage: 475.98 MB\n"
      ]
     },
     {
@@ -1992,8 +2020,8 @@
      "output_type": "stream",
      "text": [
       "Starting encoder\n",
-      "CPU times: user 53min 53s, sys: 1h 53min 47s, total: 2h 47min 40s\n",
-      "Wall time: 5min 8s\n"
+      "CPU times: user 2h 43min 21s, sys: 5h 40min 16s, total: 8h 23min 38s\n",
+      "Wall time: 12min 53s\n"
      ]
     }
    ],
@@ -2021,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2029,13 +2057,12 @@
      "output_type": "stream",
      "text": [
       "Starting decoder\n",
-      "decoder deleting\n",
       "Beginning likelihood calculation\n",
       "Beginning posterior calculation\n",
       "Decoder finished!\n",
       "Posteriors shape: (1518693, 86)\n",
-      "CPU times: user 9min 18s, sys: 7min 5s, total: 16min 23s\n",
-      "Wall time: 7min 25s\n"
+      "CPU times: user 13min 3s, sys: 8min 47s, total: 21min 51s\n",
+      "Wall time: 10min 44s\n"
      ]
     }
    ],
@@ -2056,23 +2083,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved posteriors to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_tets_only_posteriors_functionalized_mvt.nc\n",
-      "Saved linearized position to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_linearposition_functionalized.nc\n",
-      "Saved posteriors to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_tets_only_posteriors_functionalized_mvt.h5\n"
+      "Saved posteriors to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_posteriors_functionalized_immobile.nc\n",
+      "Saved linearized position to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_linearposition_functionalized_immobile.nc\n",
+      "Saved posteriors to /stelmo/mcoulter/bill/filterframework/bill_7_2_shuffle_0_posteriors_functionalized_immobile.h5\n"
      ]
     }
    ],
    "source": [
     "# TEMPORARY: save posteriors and position\n",
-    "posterior_file_name = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_posteriors_functionalized.nc'\n",
-    "posterior_file_name_h5 = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_posteriors_functionalized.h5'\n",
+    "posterior_file_name = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_posteriors_functionalized_immobile.nc'\n",
+    "posterior_file_name_h5 = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_posteriors_functionalized_immobile.h5'\n",
     "\n",
     "post1 = posteriors.apply_time_event(rips, event_mask_name='ripple_grp')\n",
     "post2 = post1.reset_index()\n",
@@ -2084,7 +2111,7 @@
     "\n",
     "    # to export linearized position to MatLab: again convert to xarray and then save as netcdf\n",
     "\n",
-    "position_file_name = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_linearposition_functionalized.nc'\n",
+    "position_file_name = output_directory + rat_name + '_' + str(day) + '_' + str(epoch) + '_shuffle_' + str(shift_amount) + '_linearposition_functionalized_immobile.nc'\n",
     "\n",
     "linearized_pos1 = binned_linear_pos.apply_time_event(rips, event_mask_name='ripple_grp')\n",
     "linearized_pos2 = linearized_pos1.reset_index()\n",
